--- a/index.html
+++ b/index.html
@@ -11,27 +11,39 @@
     <div class="container">
         <div class="img-container">
             <img src="https://images.unsplash.com/photo-1500485035595-cbe6f645feb1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+            <u><h1>Beautiful View</h1></u>
+            <h5>A daily morning view that shows you how calm the sky can be.</h5>
         </div>
 
         <div class="img-container">
+            <u><h1>Mountain Seeker</h1></u>
+            <h5>A good swim or a lovely hike. You choose.</h5>
             <img src="https://images.unsplash.com/photo-1537824598505-99ee03483384?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
         </div>
 
         <div class="img-container">
             <img src="https://images.unsplash.com/photo-1541410965313-d53b3c16ef17?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+            <u><h1>Peaceful Ride</h1></u>
+            <h5>even though this would be a nice ride, being on that yacht would be amzing.</h5>
         </div>
 
         <div class="img-container">
             <img src="https://images.unsplash.com/photo-1614586125858-e695dd97d1b6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1203&q=80" alt="">
+            <u><h1>Going for Swim</h1></u>
+            <h5>Might be cold, but it would be worth it. I think.</h5>
         </div>
 
         <div class="img-container">
+            <u><h1>BigFoot Hunting</h1></u>
+            <h5>Good view but stressful nights.</h5>
             <img src="https://images.unsplash.com/photo-1625472603517-1b0dc72846ab?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
         </div>
 
 
         <div class="img-container">
-           <img src="https://images.unsplash.com/photo-1619441207978-3d326c46e2c9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" alt="">     
+           <img src="https://images.unsplash.com/photo-1619441207978-3d326c46e2c9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" alt="">  
+           <h1>Perfect Hide & Seek area.</h1>
+           <h5>Play with caution or else you'll be on some missing posters in about a week.</h5>
         </div>
 
     </div>
